--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #f1f1f1;
+  height: 100vh;
 }
 
 .App-logo {
@@ -14,6 +16,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.App-layout {
+    margin: auto;
+    width: 80vw;
 }
 
 .App-link {
