--- a/src/pages/UserDetail/components/DetailTable/DetailTable.css
+++ b/src/pages/UserDetail/components/DetailTable/DetailTable.css
@@ -1,4 +1,4 @@
-.User-table {
+.Detail-table {
     margin: auto;
     padding: 8px 0px;
     border-collapse: collapse;
@@ -16,12 +16,9 @@ th {
     background-color: rgb(47, 141, 136);
     color: white;
     border: 1px solid #ddd;
+    width: 200px;
 }
 
 tr:nth-child(even){background-color: rgb(214, 255, 252);}
 
 tr:hover {background-color: #ddd;}
-
-.link {
-    text-decoration: none;
-}
