--- a/src/pages/PageRouter/PageRouter.css
+++ b/src/pages/PageRouter/PageRouter.css
@@ -10,6 +10,6 @@
     text-decoration: none;
     padding: 8px 16px;
     border-radius: 4px;
-    color: antiquewhite;
+    color: white;
     width: 120px;
 }
