restructured project, added loading components, code enhancements

--- a/src/pages/PageRouter/PageRouter.css
+++ b/src/pages/PageRouter/PageRouter.css
@@ -1,8 +1,7 @@
 .Link-container {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 8px;
-    margin-bottom: 16px;
+    padding-bottom: 16px;
 }
 
 .Link {
