--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: #f1f1f1;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -21,10 +21,23 @@
 .App-layout {
     margin: auto;
     width: 60vw;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    min-height: 60vh;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.App-footer {
+  background-color: #282c34;
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
 }
 
 @keyframes App-logo-spin {
