--- a/src/pages/User/UserDetail/components/DetailTable/DetailTable.css
+++ b/src/pages/User/UserDetail/components/DetailTable/DetailTable.css
@@ -2,23 +2,31 @@
     margin: auto;
     padding: 8px 0px;
     border-collapse: collapse;
+    text-align: left;
 }
 
 td {
     border: 1px solid #ddd;
-    padding: 4px;
+    padding: 8px;
 }
 
 th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
-    background-color: rgb(47, 141, 136);
+    background-color: #2f8d88;
     color: white;
     border: 1px solid #ddd;
+}
+
+.Header-desc {
+    width: 150px;
+}
+
+.Header-value {
     width: 200px;
 }
 
-tr:nth-child(even){background-color: rgb(214, 255, 252);}
+tr:nth-child(even){background-color: #d6fffc;}
 
 tr:hover {background-color: #ddd;}
