--- a/src/pages/User/components/UserTable.css
+++ b/src/pages/User/components/UserTable.css
@@ -13,12 +13,12 @@ th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
-    background-color: rgb(47, 141, 136);
+    background-color: #2f8d88;
     color: white;
     border: 1px solid #ddd;
 }
 
-tr:nth-child(even){background-color: rgb(214, 255, 252);}
+tr:nth-child(even){background-color: #d6fffc;}
 
 tr:hover {background-color: #ddd;}
 
